--- a/docs/legacy/copied-from-beats/docs/monitoring/monitoring-beats.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/monitoring/monitoring-beats.asciidoc
@@ -1,22 +1,13 @@
-[role="xpack"]
 [[monitoring]]
-= Monitor {beatname_uc}
+= Monitor the APM Server binary
 
 ++++
-<titleabbrev>Monitor</titleabbrev>
+<titleabbrev>APM Server binary</titleabbrev>
 ++++
 
-You can use the {stack} {monitor-features} to gain insight into the health of
-ifndef::apm-server[]
-{beatname_uc} instances running in your environment.
-endif::[]
-ifdef::apm-server[]
-{beatname_uc}.
-endif::[]
-
-To monitor {beatname_uc}, make sure monitoring is enabled on your {es} cluster,
-then configure the method used to collect {beatname_uc} metrics. You can use one
-of following methods:
+There are two methods to monitor the APM Server binary.
+Make sure monitoring is enabled on your {es} cluster,
+then configure one of these methods to collect {beatname_uc} metrics:
 
 * <<monitoring-internal-collection,Internal collection>> - Internal
 collectors send monitoring data directly to your monitoring cluster.
@@ -25,11 +16,6 @@ ifndef::serverless[]
 {metricbeat} collects monitoring data from your {beatname_uc} instance
 and sends it directly to your monitoring cluster.
 endif::[]
-
-//Commenting out this link temporarily until the general monitoring docs can be
-//updated.
-//To learn about monitoring in general, see
-//{ref}/monitor-elasticsearch-cluster.html[Monitor a cluster].
 
 include::monitoring-internal-collection.asciidoc[]
 
