--- a/docs/manage-storage.asciidoc
+++ b/docs/manage-storage.asciidoc
@@ -208,3 +208,5 @@ POST /.ds-*-apm*/_update_by_query?expand_wildcards=all
 TIP: Remember to also change the service name in the {apm-agents-ref}/index.html[{apm-agent} configuration].
 
 include::./apm-tune-elasticsearch.asciidoc[]
+
+include::./legacy/exploring-es-data.asciidoc[leveloffset=+2]
