--- a/changelogs/8.8.asciidoc
+++ b/changelogs/8.8.asciidoc
@@ -18,6 +18,7 @@ https://github.com/elastic/apm-server/compare/8.7\...8.8[View commits]
 
 [float]
 ==== Bug fixes
+- Fix ILM policy name mismatch on rollup index templates {pull}10823[10823]
 
 [float]
 ==== Intake API Changes
