--- a/docs/configure/outputs/logstash.asciidoc
+++ b/docs/configure/outputs/logstash.asciidoc
@@ -397,3 +397,6 @@ default is `1s`.
 
 The maximum number of seconds to wait before attempting to connect to
 {ls} after a network error. The default is `60s`.
+
+// Logstash security
+include::../../legacy/copied-from-beats/docs/shared-ssl-logstash-config.asciidoc[]
