--- a/docs/legacy/copied-from-beats/docs/https.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/https.asciidoc
@@ -10,7 +10,7 @@
 //// This content is structured to be included as a whole file.
 //////////////////////////////////////////////////////////////////////////
 
-[role="xpack"]
+[float]
 [[securing-communication-elasticsearch]]
 == Secure communication with {es}
 
