--- a/docs/legacy/copied-from-beats/docs/shared-ssl-logstash-config.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-ssl-logstash-config.asciidoc
@@ -9,7 +9,7 @@
 //// include::../../libbeat/docs/shared-ssl-logstash-config.asciidoc[]
 //////////////////////////////////////////////////////////////////////////
 
-[role="xpack"]
+[float]
 [[configuring-ssl-logstash]]
 == Secure communication with {ls}
 
