--- a/docs/configure/anonymous-auth.asciidoc
+++ b/docs/configure/anonymous-auth.asciidoc
@@ -25,13 +25,13 @@ apm-server.auth.anonymous.rate_limit.ip_limit: 1000
 ----
 
 IMPORTANT: All anonymous access configuration is ignored if
-<<secure-communication-agents,authenticated communication>> is disabled.
+<<secure-agent-communication,authenticated communication>> is disabled.
 
 [float]
 [[config-auth-anon-rum]]
 == Real User Monitoring (RUM)
 
-If an <<api-key-legacy,API key>> or <<secret-token-legacy,secret token>> is configured,
+If an <<api-key,API key>> or <<secret-token,secret token>> is configured,
 then anonymous authentication must be enabled to collect RUM data.
 For this reason, anonymous auth will be enabled automatically if <<rum-enable,`apm-server.rum.enabled`>>
 is set to `true`, and <<config-auth-anon-enabled,`apm-server.auth.anonymous.enabled`>> is not explicitly defined.
