--- a/docs/legacy/copied-from-beats/docs/command-reference.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/command-reference.asciidoc
@@ -135,10 +135,10 @@ ifdef::apm-server[]
 
 experimental::[]
 
-deprecated::[8.6.0, Users should create API Keys through {kib} or the {es} REST API. See <<api-key-legacy>>.]
+deprecated::[8.6.0, Users should create API Keys through {kib} or the {es} REST API. See <<api-key>>.]
 
 Communication between APM agents and APM Server now supports sending an
-<<api-key-legacy,API Key in the Authorization header>>.
+<<api-key,API Key in the Authorization header>>.
 APM Server provides an `apikey` command that can create, verify, invalidate,
 and show information about API Keys for agent/server communication.
 Most operations require the `manage_own_api_key` cluster privilege,
@@ -225,7 +225,7 @@ When used with `info`, only returns valid API Keys (not expired or invalidated).
 {beatname_lc} apikey invalidate --name example-001
 -----
 
-For more information, see <<api-key-legacy>>.
+For more information, see <<api-key>>.
 
 endif::[]
 
