--- a/docs/tls-comms.asciidoc
+++ b/docs/tls-comms.asciidoc
@@ -1,26 +1,21 @@
-SSL/TLS is disabled by default. Besides enabling it, you need to provide a certificate and a corresponding
-private key as well.
+[[agent-tls]]
+=== {apm-agent} TLS communication
 
-The following is a basic APM Server SSL config with secure communication enabled.
-This will make APM Server serve HTTPS requests instead of HTTP.
+TLS is disabled by default.
+When TLS is enabled for APM Server inbound communication, agents will verify the identity
+of the APM Server by authenticating its certificate.
 
-[source,yaml]
-----
-apm-server.ssl.enabled: true
-apm-server.ssl.certificate: "/path/to/apm-server.crt"
-apm-server.ssl.key: "/path/to/apm-server.key"
-----
+When TLS is enabled, a certificate and corresponding private key are required.
+The certificate and private key can either be issued by a trusted certificate authority (CA)
+or be <<agent-self-sign,self-signed>>.
 
-A full list of configuration options is available in <<agent-server-ssl>>.
+[float]
+[[agent-self-sign]]
+=== Use a self-signed certificate
 
-Certificate and private key can be issued by a trusted certificate authority (CA)
-or <<self-signed-cert,self-signed>>.
-
-NOTE: When using a self-signed (or custom CA) certificate, communication from APM Agents will require
-additional settings due to <<ssl-server-authentication>>
-
-[[self-signed-cert]]
-==== Creating a self-signed certificate
+[float]
+[[agent-self-sign-1]]
+==== Step 1: Create a self-signed certificate
 
 The {es} distribution offers the `certutil` tool for the creation of self-signed certificates:
 
@@ -31,14 +26,20 @@ location of the output zip archive containing the certificate and the private ke
 <path-to-ca-crt>/ca.crt --ca-key <path-to-ca-key>/ca.key --pem --name localhost`
 4. Extract the certificate and key from the resulted zip archive.
 
-[[ssl-server-authentication]]
-==== Server certificate authentication
+[float]
+[[agent-self-sign-2]]
+==== Step 2: Configure the APM Server
 
-By default, when SSL is enabled for APM Server inbound communication, agents will verify the identity
-of the APM Server by authenticating its certificate.
+Enable TLS and configure the APM Server to point to the extracted certificate and key:
+
+include::./tab-widgets/tls-widget.asciidoc[]
+
+[float]
+[[agent-self-sign-3]]
+==== Step 3: Configure APM agents
 
 When the APM server uses a certificate that is not chained to a publicly-trusted certificate
-(e.g. self-signed), additional setting will be required on the agent side:
+(e.g. self-signed), additional configuration is required in the {apm-agent}:
 
 * *Go agent*: certificate pinning through {apm-go-ref}/configuration.html#config-server-cert[`ELASTIC_APM_SERVER_CERT`]
 * *Python agent*: certificate pinning through {apm-py-ref}/configuration.html#config-server-cert[`server_cert`]
@@ -48,8 +49,7 @@ When the APM server uses a certificate that is not chained to a publicly-trusted
 * *Java agent*: adding the certificate to the JVM `trustStore`.
 See {apm-java-ref}/ssl-configuration.html#ssl-server-authentication[APM Server authentication] for more details.
 
-It is not recommended to disable APM Server authentication,
-however it is possible through agents configuration:
+We do not recommend disabling {apm-agent} verification of the server's certificate, but it is possible:
 
 * *Go agent*: {apm-go-ref}/configuration.html#config-verify-server-cert[`ELASTIC_APM_VERIFY_SERVER_CERT`]
 * *.NET agent*: {apm-dotnet-ref}/config-reporter.html#config-verify-server-cert[`VerifyServerCert`]
@@ -59,16 +59,9 @@ however it is possible through agents configuration:
 * *Ruby agent*: {apm-ruby-ref}/configuration.html#config-verify-server-cert[`verify_server_cert`]
 * *Node.js agent*: {apm-node-ref}/configuration.html#validate-server-cert[`verifyServerCert`]
 
-[[ssl-client-authentication]]
-==== Client certificate authentication
+[float]
+[[agent-client-cert]]
+=== Client certificate authentication
 
-By default, the APM Server does not require agents to provide a certificate for authentication.
-This can be changed through the `ssl.client_authentication` configuration.
-
-There is no dedicated support for SSL/TLS client certificate authentication in Elastic's backend agents,
-so setting it up may require some additional effort. For example - see
-{apm-java-ref}/ssl-configuration.html#ssl-client-authentication[Java Agent authentication].
-
-If agents are authenticating themselves using a certificate that cannot be authenticated through known
-CAs (e.g. self signed certificates), use the `ssl.certificate_authorities` to set a custom CA.
-This will automatically modify the `ssl.client_authentication` configuration to require authentication.
+APM Server does not require agents to provide a certificate for authentication,
+and there is no dedicated support for SSL/TLS client certificate authentication in Elastic’s backend agents.
