fix decision tree

--- a/docs/legacy/getting-started-apm-server.asciidoc
+++ b/docs/legacy/getting-started-apm-server.asciidoc
@@ -138,9 +138,8 @@ image::./images/fm-ov.png[APM Server fleet overview]
 
 Use the decision tree below to help determine which method of configuring and running the APM Server is best for your use case.
 
-// TODO: UNCOMMENT THIS
 [subs=attributes+]
-// include::./diagrams/apm-decision-tree.asciidoc[APM Server decision tree]
+include::../diagrams/apm-decision-tree.asciidoc[APM Server decision tree]
 
 
 === APM Server binary
