--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -80,7 +80,7 @@ include::input-apm.asciidoc[]
 
 include::configure/index.asciidoc[leveloffset=+1]
 
-include::secure-agent-communication.asciidoc[]
+include::secure-comms.asciidoc[]
 
 include::monitor-apm-server.asciidoc[]
 
@@ -130,9 +130,6 @@ include::./legacy/overview.asciidoc[]
 // endif::[]
 
 include::./legacy/getting-started-apm-server.asciidoc[]
-
-:beat-specific-security: {docdir}/legacy/security.asciidoc
-include::{libbeat-dir}/shared-securing-beat.asciidoc[leveloffset=+1]
 
 include::./legacy/troubleshooting.asciidoc[leveloffset=+1]
 
